uipath-service/main/default/objects/Case/fields/Awaiting_Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Pending_Reason__c</fullName>
    <label>Awaiting/Pending  Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending from Tech Support</fullName>
            </value>
            <value>
                <fullName>Pending from Sr. Tech Support</fullName>
            </value>
            <value>
                <fullName>Pending from Infra/MCS</fullName>
            </value>
            <value>
                <fullName>Pending from Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>