uipath-service/main/default/objects/Case/fields/Case_Web_Form_Region__c.field-meta.xml
<CustomField>
    <fullName>Case_Web_Form_Region__c</fullName>
    <label>Case Web Form Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Cloud Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>