uipath-service/main/default/objects/Case/fields/CheckCustomerFirstResponse__c.field-meta.xml
<CustomField>
    <fullName>CheckCustomerFirstResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckCustomerFirstResponse</label>
    <type>Checkbox</type>
</CustomField>