uipath-service/main/default/objects/Case/fields/Closure_Classification__c.field-meta.xml
<CustomField>
    <fullName>Closure_Classification__c</fullName>
    <label>Closure Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party not under support scope</fullName>
            </value>
            <value>
                <fullName>Answer/Solution Provided</fullName>
            </value>
            <value>
                <fullName>Answer/Solution provided(Referring KB)</fullName>
            </value>
            <value>
                <fullName>Bug - Reported as JIRA</fullName>
            </value>
            <value>
                <fullName>Customer/Environment Specific</fullName>
            </value>
            <value>
                <fullName>Customer Abandoned</fullName>
            </value>
            <value>
                <fullName>Customer Found Solution(Referring KB)</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>