uipath-service/main/default/objects/Case/fields/Duration_in_Pending_Infra_MCS_support__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Pending_Infra_MCS_support__c</fullName>
    <label>Duration in Pending Infra/MCS support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>