uipath-service/main/default/objects/Case/fields/Duration_in_Pending_Product__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Pending_Product__c</fullName>
    <label>Duration in Pending Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>