uipath-service/main/default/objects/Case/fields/Duration_Pending_Sr_Tech_Support__c.field-meta.xml
<CustomField>
    <fullName>Duration_Pending_Sr_Tech_Support__c</fullName>
    <label>Duration Pending Sr.Tech Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>