uipath-service/main/default/objects/Case/fields/Ischanged_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Ischanged_Support_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ischanged Support Type</label>
    <type>Checkbox</type>
</CustomField>