uipath-service/main/default/objects/Case/fields/Merged_To_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Merged_To_Case_Number__c</fullName>
    <description>Stores the merged to case number when cas eis merged</description>
    <label>Merged To Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>