uipath-service/main/default/objects/Case/fields/NoOfReceived_Prior_value__c.field-meta.xml
<CustomField>
    <fullName>NoOfReceived_Prior_value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NoOfReceived Prior value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>