uipath-service/main/default/objects/Case/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <label>Product Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Alliance</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>Agent Desktop</fullName>
                <label>UiPath Assistant</label>
            </value>
            <value>
                <fullName>AI Fabric</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
                <label>Action Center</label>
            </value>
            <value>
                <fullName>Attended browser embedding SDK</fullName>
            </value>
            <value>
                <fullName>Automation Ready Programs</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Cloud Platform</fullName>
                <label>Automation Cloud</label>
            </value>
            <value>
                <fullName>Connect Enterprise</fullName>
                <label>Automation Hub</label>
            </value>
            <value>
                <fullName>Data Service</fullName>
            </value>
            <value>
                <fullName>Document Understanding</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>IT Automation</fullName>
            </value>
            <value>
                <fullName>Learning Platform Inquiries</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
                <label>License</label>
            </value>
            <value>
                <fullName>Orchestrator</fullName>
            </value>
            <value>
                <fullName>Orchestrator Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner Product</fullName>
            </value>
            <value>
                <fullName>Partner Training</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Process Gold</fullName>
                <label>Process Mining</label>
            </value>
            <value>
                <fullName>Robot</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Studio X</fullName>
            </value>
            <value>
                <fullName>Task Capture</fullName>
            </value>
            <value>
                <fullName>Task Mining</fullName>
            </value>
            <value>
                <fullName>Test Manager</fullName>
            </value>
            <value>
                <fullName>UiPath Go</fullName>
                <label>UiPath Connect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>