uipath-service/main/default/objects/Case/fields/Status_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Sub_Category__c</fullName>
    <label>Status Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Strike Rule</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>