uipath-service/main/default/objects/Case/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GMT+00:00  Greenwich Mean Time</fullName>
            </value>
            <value>
                <fullName>GMT+00:00  Western European Time</fullName>
            </value>
            <value>
                <fullName>GMT+01:00  Central European Time</fullName>
            </value>
            <value>
                <fullName>GMT+02:00  Eastern European Time</fullName>
            </value>
            <value>
                <fullName>GMT+02:00  Israel Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+02:00  South Africa Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+03:00  Arabian Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+03:00  East Africa Time</fullName>
            </value>
            <value>
                <fullName>GMT+03:00  Further-eastern European Time</fullName>
            </value>
            <value>
                <fullName>GMT+03:30  Iran Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+04:00  Georgia Time</fullName>
            </value>
            <value>
                <fullName>GMT+04:00  Gulf Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+04:00  Moscow Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+04:30  Afghanistan Time</fullName>
            </value>
            <value>
                <fullName>GMT+05:00  Pakistan Time</fullName>
            </value>
            <value>
                <fullName>GMT+05:00  Uzbekistan Time</fullName>
            </value>
            <value>
                <fullName>GMT+05:30  India Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+05:45  Nepal Time</fullName>
            </value>
            <value>
                <fullName>GMT+06:00  Bangladesh Time</fullName>
            </value>
            <value>
                <fullName>GMT+06:00  Yekaterinburg Time</fullName>
            </value>
            <value>
                <fullName>GMT+06:30  Myanmar Time</fullName>
            </value>
            <value>
                <fullName>GMT+07:00  Indochina Time</fullName>
            </value>
            <value>
                <fullName>GMT+07:00  Western Indonesia Time</fullName>
            </value>
            <value>
                <fullName>GMT+08:00  Australian Western Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+08:00  China Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+08:00  Hong Kong Time</fullName>
            </value>
            <value>
                <fullName>GMT+08:00  Malaysia Time</fullName>
            </value>
            <value>
                <fullName>GMT+08:00  Philippine Time</fullName>
            </value>
            <value>
                <fullName>GMT+08:00  Singapore Standard Time</fullName>
            </value>
            <value>
                <fullName>GMT+08:00  Taipei Standard Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>