uipath-service/main/default/objects/Case/fields/Total_Case_Customer_Action_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_Customer_Action_Duration__c</fullName>
    <label>Total Case Customer Action Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>