uipath-service/main/default/objects/Case/fields/Total_Case_In_Process_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_In_Process_Duration__c</fullName>
    <label>Duration in In Process Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>