uipath-service/main/default/objects/Case/fields/TTE_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>TTE_Time_Stamp__c</fullName>
    <label>TTE Time Stamp</label>
    <type>DateTime</type>
</CustomField>