uipath-service/main/default/objects/Case/recordTypes/Engagement_Request.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Request</fullName>
    <active>true</active>
    <businessProcess>Engagement Request</businessProcess>
    <description>Ticket created to request L2 and L3 support.</description>
    <label>Expert Request</label>
</RecordType>