uipath-service/main/default/objects/Case/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <businessProcess>Service Request%2FIncident</businessProcess>
    <description>Ticket created to track faults or system error experienced by customer.</description>
    <label>Incident</label>
</RecordType>