uipath-service/main/default/objects/Case/recordTypes/Japan_Academy.recordType-meta.xml
<RecordType>
    <fullName>Japan_Academy</fullName>
    <active>true</active>
    <businessProcess>Sales Operation</businessProcess>
    <label>Japan Academy</label>
</RecordType>