uipath-service/main/default/objects/Case/recordTypes/Japan_Engagement_Request.recordType-meta.xml
<RecordType>
    <fullName>Japan_Engagement_Request</fullName>
    <active>true</active>
    <businessProcess>Engagement Request</businessProcess>
    <label>Japan Engagement Request</label>
</RecordType>