uipath-service/main/default/objects/Case/recordTypes/Japan_Licensing.recordType-meta.xml
<RecordType>
    <fullName>Japan_Licensing</fullName>
    <active>true</active>
    <businessProcess>Sales Operation</businessProcess>
    <label>Japan Licensing</label>
</RecordType>