uipath-service/main/default/objects/Case/recordTypes/Sales_Operation.recordType-meta.xml
<RecordType>
    <fullName>Sales_Operation</fullName>
    <active>true</active>
    <businessProcess>Sales Operation</businessProcess>
    <label>Sales Operation</label>
</RecordType>