uipath-service/main/default/objects/Case/recordTypes/Service_Incident.recordType-meta.xml
<RecordType>
    <fullName>Service_Incident</fullName>
    <active>true</active>
    <businessProcess>Service Incident</businessProcess>
    <description>Ticket created to track an identical issue reported independently by multiple customers.</description>
    <label>Service Incident</label>
</RecordType>