uipath-service/main/default/objects/Case/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <businessProcess>Service Request</businessProcess>
    <description>Ticket created for service enablement for customers.</description>
    <label>Service Request</label>
</RecordType>