uipath-service/main/default/objects/Case/validationRules/Academy_Request_Sub_Category_Mand.validationRule-meta.xml
<ValidationRule>
    <fullName>Academy_Request_Sub_Category_Mand</fullName>
    <active>true</active>
    <description>If What is your request related to is Academy then Request Sub Category is mandatory for internal users</description>
    <errorConditionFormula>AND(ISPICKVAL( What_is_your_request_related_to__c ,&quot;Academy&quot;),
      ISPICKVAL( Request_Sub_Category__c , &quot;&quot;),
       ISPICKVAL( $User.UserType , &quot;Standard&quot;),
 RecordType.DeveloperName == &quot;Academy&quot;,
 !ISNEW() ,
 ISPICKVAL( Status , &quot;Closed&quot;) 

)</errorConditionFormula>
    <errorMessage>Please fill in the Request Sub Category.</errorMessage>
</ValidationRule>