uipath-service/main/default/objects/Case/validationRules/Block_cases_with_Out_of_office_subject.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_cases_with_Out_of_office_subject</fullName>
    <active>true</active>
    <description>Block emails if subject has out of office</description>
    <errorConditionFormula>AND(
OR(
CONTAINS(LOWER(Subject), &#39;out of office&#39;),
CONTAINS(LOWER(Subject), &#39;ooo&#39;)
),
ISPICKVAL( Origin ,&#39;Email&#39;),
ISNEW()
)</errorConditionFormula>
    <errorMessage>The case cannot be created as it is a spam case.</errorMessage>
</ValidationRule>