uipath-service/main/default/objects/Case/validationRules/Check_Account_Name_is_Unassign_in_resolv.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Account_Name_is_Unassign_in_resolv</fullName>
    <active>true</active>
    <description>Check account Name is Unassigned Account when status become resolved .</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName =&quot;Incident&quot; ,
OR(ISPICKVAL(Status,&quot;Resolved&quot;),ISPICKVAL(Status,&quot;Closed&quot;)),
 ISBLANK(Primary_Case_lookup__c),
 AccountId = $Label.Dummy_Account,
Is_Batch_Running__c = False)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>This case is currently linked to &quot;Unassigned Account&quot;. Please change it to Original Account</errorMessage>
</ValidationRule>