uipath-service/main/default/objects/Case/validationRules/Edit_Desc_permiss_Not_Allowed_for_prof.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Desc_permiss_Not_Allowed_for_prof</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(RecordType.Name =&#39;Academy&#39;,
RecordType.Name =&#39;Engagement Request&#39;,
RecordType.Name =&#39;Incident&#39;,
RecordType.Name =&#39;Japan Academy&#39;,
RecordType.Name =&#39;Japan Engagement Request&#39;,
RecordType.Name =&#39;Japan Incident&#39;,
RecordType.Name =&#39;Japan Licensing&#39;,
RecordType.Name =&#39;Sales Operation&#39;,
RecordType.Name =&#39;Service Incident&#39;),
ISCHANGED(Description),
((NOW()-CreatedDate)*10000) &gt; 1,
OR($Profile.Name = &quot;Support Agent&quot;,
$Profile.Name = &quot;Support Supervisor&quot;, 
  $Profile.Name =&quot;Sales Operations Advanced&quot;))</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>You don&#39;t have edit access for the Description field</errorMessage>
</ValidationRule>